--- a/src/main/webapp/footer.jspf
+++ b/src/main/webapp/footer.jspf
@@ -1,7 +1,7 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-    <script src="${pageContext.request.contextPath}/js/vendor/jquery.js"></script>
-    <script src="${pageContext.request.contextPath}/js/foundation.min.js"></script>
+    <script src="${pageContext.request.contextPath}/resources/js/vendor/jquery.js"></script>
+    <script src="${pageContext.request.contextPath}/resources/js/foundation.min.js"></script>
     <script>
       $(document).foundation();
     </script>
