--- a/src/main/webapp/WEB-INF/header.jspf
+++ b/src/main/webapp/WEB-INF/header.jspf
@@ -34,7 +34,7 @@
                             <li><a href="${pageContext.request.contextPath}/myCourses">My Courses</a></li>
                             <c:if test="${requestScope.usertype == 1}">
                             <li><a href="${pageContext.request.contextPath}/myMeetups">My Meetups</a></li>
-                            <li><a href="${pageContext.request.contextPath}/addCourse">Add Course</a></li>
+                            <li><a href="${pageContext.request.contextPath}/newCourse">Add Course</a></li>
                             <li><a href="${pageContext.request.contextPath}/employee">New Meetup</a></li>
                             </c:if>
                         </ul>
