--- a/src/main/webapp/WEB-INF/header.jspf
+++ b/src/main/webapp/WEB-INF/header.jspf
@@ -33,13 +33,23 @@
                             <li><a href="${pageContext.request.contextPath}/studentPortal">My Profile</a></li>
                             <li><a href="${pageContext.request.contextPath}/myCourses">My Courses</a></li>
                             <c:if test="${requestScope.usertype == 1}">
-                            <li><a href="${pageContext.request.contextPath}/myMeetups">My Meetups</a></li>
                             <li><a href="${pageContext.request.contextPath}/newCourse">Add Course</a></li>
-                            <li><a href="${pageContext.request.contextPath}/employee">New Meetup</a></li>
                             </c:if>
                         </ul>
                     </li>
-                    <li class="has-dropdown"><a href="${pageContext.request.contextPath}/logout">Logout</a>
+
+                    <c:if test="${requestScope.usertype == 1}">
+
+                     <li class="has-dropdown"><a href="#">Meetups</a>
+                        <ul class="dropdown">
+                            <li><a href="${pageContext.request.contextPath}/myMeetups">My Meetups</a></li>
+                            <li><a href="${pageContext.request.contextPath}/joinMeetup">Join Meetup</a></li>
+                            <li><a href="${pageContext.request.contextPath}/newMeetup">Add New Meetup</a></li>
+                        </ul>
+                    </li>
+                    </c:if>
+
+                    <li><a href="${pageContext.request.contextPath}/logout">Logout</a>
                     </li>
                 </ul>
             </section>
