--- a/src/main/webapp/header.jspf
+++ b/src/main/webapp/header.jspf
@@ -27,6 +27,21 @@
                 <!-- Right Nav Section -->
                
                 <!-- Left Nav Section -->
+                <% if (request.isUserInRole("admin")){ %>
+                
+                <ul class="left">
+                    <li class="has-dropdown"><a href="#">Course</a>
+                        <ul class="dropdown">
+                            <li><a href="${pageContext.request.contextPath}/courseAdmin">Add</a></li>
+                            <li><a href="${pageContext.request.contextPath}/deleteCourseAdmin">Delete</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="${pageContext.request.contextPath}/newAccount">Create New Account</a>
+                    </li>
+                </ul>
+                    <% } %>
+                                <% if (!request.isUserInRole("admin")){ %>
+
                 <ul class="left">
                     <li class="has-dropdown"><a href="#">Login</a>
                         <ul class="dropdown">
@@ -37,5 +52,6 @@
                     <li><a href="${pageContext.request.contextPath}/newAccount">Create New Account</a>
                     </li>
                 </ul>
+                    <% } %>
             </section>
         </nav>     
